# EventFinderCLI

./: README.md
event_finder/: Cargo.toml
event_finder/.github/workflows/: ci.yml
event_finder/src/: data_processing.rs  html_parser.rs  main.rs  web_requests.rs
