[package]
name = "event_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
chrono = "0.4"
url = "2.2.2"
serde_json = "1.0"
mockito = "0.28"






